# Belinha

./: CMakeLists.txt  NotasImportantes.rtf  belinha.h
2017Arequipa/: CMakeLists.txt
2017Arequipa/EulerConsLaw/: CMakeLists.txt
2017Arequipa/SimworxLib/: CMakeLists.txt  TSWXGraphElement.cpp  TSWXGraphElement.h  TSWXGraphMesh.cpp  TSWXGraphMesh.h  pzelast3dGD.cpp  pzelast3dGD.h
2017Arequipa/Torre/: CMakeLists.txt  TPZEulerBernoulliBC.cpp  TPZEulerBernoulliBC.h  TPZEulerBernoulliBeam.cpp  TPZEulerBernoulliBeam.h  TPZEulerBernoulliBeamData.cpp  TPZEulerBernoulliBeamData.h  TPZNewmarkAnalysis.cpp  TPZNewmarkAnalysis.h  TSWXExportFrameMesh.cpp  TSWXExportFrameMesh.h  TTowerData.h  torre.cpp
2017Arequipa/Viga/: CMakeLists.txt  TPZPullOutTestAnalysis.cpp  TPZPullOutTestAnalysis.h  viga.cpp  viga.h
AdaptivityLib/: CMakeLists.txt
AdaptivityLib/ErrorEstimators/: CMakeLists.txt
AdaptivityLib/StrategyRef/: CMakeLists.txt
AdaptivityLib/WaveletCoef/: CMakeLists.txt
LabJucaCosta/: CMakeLists.txt
LabJucaCosta/2017LabJucaCosta/HDiv_Jorge/: main.cpp
LabJucaCosta/2018LabJucaCosta/: CMakeLists.txt
LabJucaCosta/2018LabJucaCosta/Laplacian2D2Sol_GID/: mainLNCC.cpp
LabJucaCosta/2018LabJucaCosta/Laplacian2D_GID/: Lapl2.dump  mainLNCC.cpp
LabJucaCosta/2018LabJucaCosta/Laplacian2D_GID/LaplacianCurso1.gid/: LaplacianCurso1.geo  LaplacianCurso1.msh  LaplacianCurso1.vv
LabJucaCosta/2018LabJucaCosta/Laplacian2D_GID/LaplacianCurso1_Q.gid/: LaplacianCurso1_Q.geo  LaplacianCurso1_Q.msh  LaplacianCurso1_Q.vv
LabJucaCosta/ErrorEstimation/: CMakeLists.txt
LabJucaCosta/ErrorEstimation/ErrorEstimation/: CMakeLists.txt  ProblemConfig.h  Quad.geo  Quad.msh  TPZMixedErrorEstimate.cpp  TPZPostProcessError.cpp  TPZPostProcessError.h  main.cpp
LabJucaCosta/ErrorEstimation/ErrorEstimationHDiv/: ProblemConfig.h  TPZHybridHDivErrorEstimator.h  TPZMixedHdivErrorEstimate.cpp  TPZMixedHdivErrorEstimate.h
Projects_LabJC/: CMakeLists.txt
Projects_LabJC/Elasticity2D_Wav_GID/: CMakeLists.txt  main2Solutions.cpp
Projects_LabJC/ErrorEstimation/: CMakeLists.txt
Projects_LabJC/ErrorEstimation/ErrorEstimation/: Cube.geo  Cube.msh  TPZCreateMesh.cpp  TPZCreateMesh.h  TPZMixedErrorEstimate.h
Projects_LabJC/ErrorEstimation/ErrorEstimationHDiv/: BasicMesh.geo  BasicMesh.msh  CMakeLists.txt  TPZHybridHDivErrorEstimator.cpp  main.cpp
Projects_LabJC/Laplacian2D_GID/: Lapl2DT.dump
Projects_LabJC/Laplacian_2D/: CMakeLists.txt  main.cpp
Projects_LabJC/Laplacian_2D/Dominios_GID/: Laplacian_Quad_Q.dump  Laplacian_Trian_L.dump
Projects_LabJC/Laplacian_2D/Dominios_GID/Laplac_9_nos.gid/: Laplac_9_nos.geo  Laplac_9_nos.msh  Laplac_9_nos.vv
Projects_LabJC/Laplacian_2D/Dominios_GID/LaplacianCurso1.gid/: LaplacianCurso1.msh
Projects_LabJC/Laplacian_2D/Dominios_GID/LaplacianCurso1_Q.gid/: LaplacianCurso1_Q.vv
Projects_LabJC/Laplacian_3D/: CMakeLists.txt
Projects_LabJC/Laplacian_3D/Dominios_GID/: Laplacian_3D_Hex_L_BC_L_RET.dump  Laplacian_3D_Hex_Q_BC_Q_ret.dump  Laplacian_3D_prism_L_BC_L.dump  Laplacian_3D_prisma_Q_BC_Q.dump  Laplacian_Tetra_Q_BC_Q_RETANGULO.dump  Laplacian_Trian_L_BC_L_retangulo.dump  Laplacian_tetra_L_BC_L_retangulo.dump
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/: cubo_hex_L_BC_L.dump  cubo_hex_Q_BC_Q.dump  cubo_tetra_L_BC_L.dump  cubo_tetra_Q_BC_Q.dump
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/Cubo/: Cubo.dump
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/Cubo/cubo.gid/: cubo.geo  cubo.msh  cubo.vv
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/cubo_com_menos_nos.gid/: cubo_com_menos_nos.geo  cubo_com_menos_nos.msh  cubo_com_menos_nos.vv
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/cubo_hexaedro_com_BC.gid/: cubo_hexaedro.geo  cubo_hexaedro.msh  cubo_hexaedro.vv
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/cubo_malha_quadratica_108_nos.gid/: cubo_malha_quadratica_108_nos.geo  cubo_malha_quadratica_108_nos.msh  cubo_malha_quadratica_108_nos.rdr  cubo_malha_quadratica_108_nos.vv
Projects_LabJC/Laplacian_3D/Dominios_GID/Cubo/cubo_tetraedro_sem_BC.gid/: cubo_tetraedro.geo  cubo_tetraedro.msh  cubo_tetraedro.vv
Projects_LabJC/Laplacian_3D/Dominios_GID/Laplacian_3D_VolumeComBaseRetagunlar.gid/: Laplacian_3D_retangulo.geo  Laplacian_3D_retangulo.msh  Laplacian_3D_retangulo.vv
Projects_LabJC/Poisson3D_AutoHP/: CMakeLists.txt
Projects_LabJC/Poisson3D_Shock/: main.cpp
Projects_LabJC/Problema_Transporte/: main_laila.cpp
Projects_LabJC/Problema_Transporte/Dominios_GID/Metade/: Pess_meio_Tri_L_BC_L.dump  Pess_meio_hex_L_BC_L.dump  Pess_meio_hex_Q_BC_Q.dump  Pess_meio_prisma_L_BC_L.dump  Pess_meio_prisma_Q_BC_Q.dump  Pess_meio_tetra_Q_BC_Q.dump  pess_meio_tetra_L_BC_L.dump
Projects_LabJC/Problema_Transporte/Dominios_GID/Um_quarto/: Pess_meio_tri_Q_BC_Q.dump  Pess_um_quarto_Hex_Q_BC_Q.dump  Pess_um_quarto_Tetr_L_BC_L.dump  Pess_um_quarto_Tri_Q_BC_Q.dump  Pess_um_quarto_hex_L_BC_L.dump  Pess_um_quarto_tri_L_BC_L.dump  pess_um_quarto_prisma_L_BC_L.dump  pess_um_quarto_prisma_Q_BC_Q.dump
Projects_LabJC/Projects_LabJC/: CMakeLists.txt
Projects_LabJC/Projects_LabJC/Elasticity2D_Wav_GID/: CMakeLists.txt  Lapl2DQ.dump  main2Solutions.cpp
Projects_LabJC/Projects_LabJC/Laplacian2D_GID/: main.cpp
Projects_LabJC/Projects_LabJC/Laplacian2D_GID/LaplacianCurso1_Q.gid/: LaplacianCurso1_Q.geo
Projects_LabJC/Projects_LabJC/Poisson3D_AutoHP/: Solution2.cpp  main.cpp
Projects_LabJC/Projects_LabJC/Poisson3D_Shock/: CMakeLists.txt
Projects_LabJC/Projects_LabJC/ThesisPhD/: buck1d.cpp  burger1d.cpp  elcpointgd.cpp  linflux.cpp  mainLNCC.cpp  pzelcc3d.cpp  pzelct2d.h  pzelct3d.cpp  pzelct3d.h  pzelg1d.cpp  pzelgpoint.h  pzelgpr3d.h  pzelgq2d.cpp  pzelgt2d.cpp  tgdimplicit.cpp  ttimeanalysis.h
Projects_LabJC/TestRuningsCodes/2019_03_15_ThesisPhD/: buck1d.h  euler.h  hadaptive.h  interface.h  pzelcpr3d.cpp  pzelcq2d.cpp  pzelct2d.cpp  pzelgc3d.cpp  pzelgpr3d.cpp  pzelgt2d.h
Projects_LabJC/TestRuningsCodes/2019_03_23_ThesisPhD/: CMakeLists.txt  elcpointgd.cpp  elct2dgd.cpp  pzelc1d.h  pzelcc3d.h  pzelgpoint.cpp  wavelet.cpp
neopz/: CMakeLists.txt
(+78 files in other folders)
